--- a/functions/package.json
+++ b/functions/package.json
@@ -1,10 +1,9 @@
 {
   "name": "functions",
   "scripts": {
-    "build": "tsc",
-    "build:watch": "tsc --watch",
-    "serve": "npm run build && firebase emulators:start --only functions",
-    "shell": "npm run build && firebase functions:shell",
+    "lint": "eslint",
+    "serve": "firebase emulators:start --only functions",
+    "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
@@ -21,8 +20,8 @@
     "express": "^4.18.1"
   },
   "devDependencies": {
-    "typescript": "^5.7.3",
-    "firebase-functions-test": "^3.1.0"
+    "eslint": "^8.9.0",
+    "eslint-config-google": "^0.14.0"
   },
   "private": true
 }
